[gd_scene load_steps=7 format=3 uid="uid://drivv3f1etjfo"]

[ext_resource type="Script" path="res://src/widgets/w_setting_popup.gd" id="1_mpxhs"]
[ext_resource type="Texture2D" uid="uid://di0c62wqxxpxk" path="res://assets/textures/widgets/others/UIbg.png" id="1_y15r8"]
[ext_resource type="Texture2D" uid="uid://cl2yee46qr3ib" path="res://assets/textures/widgets/icons/audioOn.png" id="2_7lrxe"]
[ext_resource type="Texture2D" uid="uid://bbgeydhqey4vx" path="res://assets/textures/widgets/icons/musicOn.png" id="3_xmntb"]
[ext_resource type="Texture2D" uid="uid://dpv4fww0l2lpr" path="res://assets/textures/widgets/others/buttonSmall.png" id="5_frhoo"]

[sub_resource type="LabelSettings" id="LabelSettings_0o02m"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="w_setting_popup" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mpxhs")
is_open_music = false

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_y15r8")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="btn_audio" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("2_7lrxe")
ignore_texture_size = true
stretch_mode = 0

[node name="slider_audio" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="btn_music" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture_normal = ExtResource("3_xmntb")
ignore_texture_size = true
stretch_mode = 0

[node name="slider_music" type="HSlider" parent="MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = -20.0
max_value = 20.0

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("5_frhoo")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer3/TextureButton"]
layout_mode = 2
offset_left = 52.0
offset_top = 28.0
offset_right = 84.0
offset_bottom = 51.0
size_flags_horizontal = 4
text = "返回"
label_settings = SubResource("LabelSettings_0o02m")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/TextureButton" to="." method="_on_texture_button_pressed"]
